# rclada_client_skeleton

./: CMakeLists.txt  README.md  ada_project.gpr  package.xml
src/: prj-main.adb  prj-ros.adb  prj-ros.ads  prj.ads
